# jonquil

./: AGENTS.md  CMakeLists.txt  LICENSE-MIT  README.md  docs.md  fpm.toml  meson.build  meson_options.txt
.github/workflows/: docs.yml  fortran-build.yml  release.yml
config/: CMakeLists.txt  install-mod.py  meson.build  template-config.cmake  template-targets.cmake  template.cmake  template.pc
config/cmake/: Findtest-drive.cmake  Findtoml-f.cmake
doc/: conf.py  index.rst
doc/_vendor/: pygments_ansi_color.py
src/: CMakeLists.txt  jonquil.f90  meson.build
src/jonquil/: CMakeLists.txt  lexer.f90  meson.build  parser.f90  ser.f90  version.f90
test/: CMakeLists.txt  meson.build
test/export/: CMakeLists.txt  example.f90  meson.build
test/unit/: CMakeLists.txt  main.f90  meson.build  test_lexer.f90
